Prevent Github banner from overlapping with navbar.

--- a/src/scss/_modules.scss
+++ b/src/scss/_modules.scss
@@ -773,6 +773,8 @@
   position: absolute;
   top: 0;
   right: 0;
+  height: 149px;
+  width: 149px;
 
   z-index: 2;
 }
