--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,7 +4,7 @@
 @import 'layout';
 @import 'modules';
 @import 'state';
-@media only screen and (min-width: 800px) {
+@media only screen and (max-width: 1200px) {
   @import 'breakpoint-1';
 }
 @import 'mediaqueries';
